@ui/ui-kit/DatePicker/DatePicker.scss
@use '../../design/settings/colors.scss' as colors;

.UIKitDatePicker {
  & .MuiInputBase-input {
    color: colors.$light-100;
    padding: 6px 12px;
    line-height: 24px;
    font-size: 16px;
    font-family: 'Inter';
    width: 110px;
    z-index: 10;
  }
  &--open {
    & .MuiInputBase-input {
      width: 250px;
    }
    & fieldset {
      padding-right: 288px;
    }
  }

  & .MuiOutlinedInput-notchedOutline {
    border-color: colors.$dark-300;
    border-radius: 2px;
    width: 158px;
  }

  & .MuiOutlinedInput-root {
    &:hover .MuiOutlinedInput-notchedOutline {
      border-color: colors.$dark-100;
      background-color: colors.$dark-500;
    }

    &.Mui-focused .MuiOutlinedInput-notchedOutline {
      border-color: colors.$primary-700;
    }

    &.Mui-disabled .MuiOutlinedInput-notchedOutline {
      border-color: colors.$dark-300;
      background-color: colors.$dark-500;
    }

    &.Mui-error {
      .MuiOutlinedInput-notchedOutline {
        border-color: colors.$danger-500;
      }
      .MuiInputBase-input {
        color: colors.$danger-500;
      }
      .MuiButtonBase-root {
        filter: invert(18%) sepia(87%) saturate(3975%) hue-rotate(339deg) brightness(100%) contrast(98%);
      }
    }
  }

  & .MuiInputBase-input.Mui-disabled {
    -webkit-text-fill-color: colors.$light-900;
  }

  & .MuiButtonBase-root {
    position: absolute;
    right: 22px;
    padding: 0;
    filter: invert(1);
    z-index: 10;
  }

  & .MuiPickersLayout-root {
    padding: 20px;
  }
}

.MuiDateCalendar-root {
  width: 300px;
  height: 348px;
  background-color: colors.$dark-500;
  color: colors.$light-100;

  .MuiTypography-caption {
    color: colors.$dark-100;
  }

  .MuiPickersDay-root {
    color: colors.$light-100;
    font-size: 16px;
    font-family: 'Inter';
    transition: 0.2s;

    &:hover,
    &:active {
      background-color: colors.$primary-900;
    }

    &:focus {
      background-color: inherit;
      border: 2px solid colors.$primary-300;
    }
  }

  .MuiPickersDay-today {
    color: colors.$primary-500;
    font-weight: 400;

    &:not(.Mui-selected):not(.Mui-focusVisible) {
      border: none;
    }
  }

  .Mui-selected {
    transition: all 0.2s;
    border: 4px solid colors.$primary-900;
    background-color: colors.$primary-500;
    color: colors.$light-100;

    &:focus {
      border: 4px solid colors.$primary-900;
      background-color: colors.$primary-500;
    }
  }

  .MuiSvgIcon-root {
    filter: invert(1);
  }

  .MuiPickersDay-dayOutsideMonth {
    color: colors.$dark-300;
  }

  .MuiPickersArrowSwitcher-button:hover,
  .MuiPickersCalendarHeader-switchViewButton:hover {
    background-color: colors.$dark-300;
  }

  .MuiDayCalendar {
    &-monthContainer {
      margin-top: 5px;
    }

    &-header {
      margin-top: 10px;
    }
  }
}

